# scpn-fusion-core

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  ANNOUNCEMENT.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  README.md  RESULTS.md  REUSE.toml  ROADMAP.md  SCPN_FUSION_CORE_COMPREHENSIVE_STUDY.md  SCPN_FUSION_INTEGRATION_REPORT.md  SECURITY.md  SUPPORT.md  UNDERDEVELOPED_REGISTER.md  VALIDATION.md  _typos.toml  ci_old.yml  conftest.py  coverage-python.xml  docker-compose.yml  generate_validation_dataset.py  generate_whitepaper.py  iter_config.json  mypy.ini.bak  pyproject.toml  (+7 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.handovers/: HANDOVER_2026-02-16_H8145_DIRECTOR_HARDENING.md  HANDOVER_2026-02-16_H8146_OPERATION_AEGIS.md  HANDOVER_2026-02-17_H8147_PYTEST_MARKER_HARDENING.md  HANDOVER_2026-02-17_H8148_MYPY_CI_PARITY.md  HANDOVER_2026-02-17_H8149_STRICT_MARKERS.md  HANDOVER_2026-02-17_H8150_TRANSFORMER_BATCH_FIRST.md  HANDOVER_2026-02-17_H8151_MYPY_RUNNER_TESTS.md  HANDOVER_2026-02-17_H8152_DISRUPTION_TRANSFORMER_TESTS.md  HANDOVER_2026-02-17_H8153_NESTED_TENSOR_WARNING_GUARD.md  HANDOVER_2026-02-17_H8154_CORRUPTED_CHECKPOINT_FALLBACK.md  HANDOVER_2026-02-17_H8155_TRANSFORMER_INPUT_SHAPE_GUARDS.md  HANDOVER_2026-02-17_H8156_PYPARSING_WARNING_FILTER_ROBUSTNESS.md  HANDOVER_2026-02-17_H8157_PY39_RUNTIME_ANNOTATION_COMPAT.md
.scratch_m3/: adaptive_runid.txt  barrier_runid.txt  barrier_t12.json  barrier_t4.json  cc_t1.json  cc_t12.json  cc_t2.json  cc_t4.json  commit_adaptive.txt  commit_algebraic.txt  commit_barrier.txt  commit_double_buffer.txt  commit_f5_artifact.txt  commit_f5_miller.txt  commit_k17a4_rust.txt  (+43 more)
scpn-fusion-rs/: Cargo.toml
scpn-fusion-rs/.cargo/: audit.toml
scpn-fusion-rs/crates/fusion-control/: Cargo.toml
scpn-fusion-rs/crates/fusion-control/src/: analytic.rs  constraints.rs  digital_twin.rs  flight_sim.rs  lib.rs  mpc.rs  optimal.rs  pid.rs  realtime.rs  snn.rs  soc_learning.rs  spi.rs  spi_ablation.rs  telemetry.rs
scpn-fusion-rs/crates/fusion-core/: Cargo.toml
scpn-fusion-rs/crates/fusion-core/benches/: current_diffusion_nonadiabatic_bench.rs  inverse_bench.rs  kernel_bench.rs  picard_bench.rs  source_bench.rs  transport_bench.rs  vacuum_bench.rs
scpn-fusion-rs/crates/fusion-core/src/: amr_kernel.rs  bfield.rs  bout_interface.rs  current_diffusion.rs  ignition.rs  inverse.rs  jacobian.rs  jit.rs  kernel.rs  lib.rs  memory_transport.rs  mpi_domain.rs  particles.rs  pedestal.rs  rf_heating.rs  source.rs  stability.rs  transport.rs  vacuum.rs  vmec_interface.rs  xpoint.rs
scpn-fusion-rs/crates/fusion-diagnostics/: Cargo.toml
scpn-fusion-rs/crates/fusion-diagnostics/src/: lib.rs  sensors.rs  tomography.rs
scpn-fusion-rs/crates/fusion-engineering/: Cargo.toml
scpn-fusion-rs/crates/fusion-engineering/src/: blanket.rs  layout.rs  lib.rs  magnets.rs  tritium.rs
scpn-fusion-rs/crates/fusion-gpu/: Cargo.toml
scpn-fusion-rs/crates/fusion-gpu/benches/: gpu_sor_bench.rs
scpn-fusion-rs/crates/fusion-gpu/src/: gs_solver.wgsl  lib.rs
scpn-fusion-rs/crates/fusion-math/: Cargo.toml
scpn-fusion-rs/crates/fusion-math/benches/: fft_bench.rs  gmres_bench.rs  multigrid_bench.rs  sor_bench.rs
scpn-fusion-rs/crates/fusion-math/examples/: multigrid_scaling.rs
scpn-fusion-rs/crates/fusion-math/src/: amr.rs  chebyshev.rs  elliptic.rs  fft.rs  gmres.rs  iga.rs  interp.rs  lib.rs  linalg.rs  multigrid.rs  sor.rs  symplectic.rs  tridiag.rs
scpn-fusion-rs/crates/fusion-math/tests/: prop_math.rs
scpn-fusion-rs/crates/fusion-ml/: Cargo.toml
scpn-fusion-rs/crates/fusion-ml/benches/: neural_transport_bench.rs
scpn-fusion-rs/crates/fusion-ml/src/: disruption.rs  lib.rs  mast_snn.rs  neural_equilibrium.rs  neural_transport.rs  pce.rs
scpn-fusion-rs/crates/fusion-nuclear/: Cargo.toml
scpn-fusion-rs/crates/fusion-nuclear/src/: bop.rs  divertor.rs  lib.rs  neutronics.rs  pwi.rs  temhd.rs  wall_interaction.rs
scpn-fusion-rs/crates/fusion-phase/: Cargo.toml
scpn-fusion-rs/crates/fusion-phase/src/: kuramoto.rs  lib.rs  sincos.rs  upde.rs
scpn-fusion-rs/crates/fusion-physics/: Cargo.toml
scpn-fusion-rs/crates/fusion-physics/benches/: faraday_recovery_bench.rs  frc_rigid_rotor_bench.rs  hall_mhd_bench.rs  hall_mhd_pulsed_bench.rs  mrti_bench.rs  pulsed_compression_bench.rs  rmf_control_bench.rs  tilt_mode_frc_bench.rs
scpn-fusion-rs/crates/fusion-physics/examples/: frc_rigid_rotor_metrics.rs  frc_rotating_bvp_status.rs
scpn-fusion-rs/crates/fusion-physics/src/: compact_optimizer.rs  design_scanner.rs  faraday_recovery.rs  fno.rs  fokker_planck.rs  gk_nonlinear.rs  hall_mhd.rs  hall_mhd_pulsed.rs  lib.rs  mrti.rs  precision_pacer.rs  rmf_control.rs  sandpile.rs  sawtooth.rs  tilt_mode_frc.rs  turbulence.rs
scpn-fusion-rs/crates/fusion-physics/src/compression/: coil_geometry.rs  mod.rs  pulsed.rs
scpn-fusion-rs/crates/fusion-physics/src/frc/: data.rs  mod.rs  rigid_rotor.rs
scpn-fusion-rs/crates/fusion-polyglot/: Cargo.toml
scpn-fusion-rs/crates/fusion-polyglot/src/: lib.rs
scpn-fusion-rs/crates/fusion-python/: Cargo.toml  pyproject.toml
scpn-fusion-rs/crates/fusion-python/src/: lib.rs
scpn-fusion-rs/crates/fusion-python/src/bindings/: control.rs  diagnostics.rs  equilibrium.rs  flight.rs  frc.rs  gpu.rs  gyrokinetics.rs  mhd.rs  ml.rs  mod.rs  neural.rs  nuclear.rs  particles.rs  phase.rs  plant.rs  rmf.rs  transport.rs
scpn-fusion-rs/crates/fusion-types/: Cargo.toml
scpn-fusion-rs/crates/fusion-types/src/: config.rs  constants.rs  error.rs  lib.rs  state.rs
scpn-fusion-rs/crates/fusion-types/tests/: prop_types.rs
scpn-fusion-rs/fuzz/: .gitignore  Cargo.toml
scpn-fusion-rs/fuzz/fuzz_targets/: mpi_domain.rs
scpn-fusion-rs/tests/: generate_reference_data.py
scpn-fusion-rs/tests/reference/: config_summary.json  reference_bosch_hale.json  reference_elliptic.json
(+2077 files in other folders)
