[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-fusion"
version = "3.9.10"
description = "SCPN Fusion Core - Advanced Plasma Physics & Control Suite"
authors = [
    {name = "Miroslav Sotek"},
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta",
]
readme = "README.md"
dependencies = [
    "click>=8.1",
    "numpy>=1.24,<2.0",
    "matplotlib",
    "scipy",
    "pydantic>=2.0",
    "pandas>=1.5",
    "requests>=2.31",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/anulum/scpn-fusion-core"
Documentation = "https://anulum.github.io/scpn-fusion-core/"
Repository = "https://github.com/anulum/scpn-fusion-core"
"Bug Tracker" = "https://github.com/anulum/scpn-fusion-core/issues"

[project.optional-dependencies]
ui = [
    "streamlit",
]
ml = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
rl = [
    "gymnasium>=1.0.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.8",
    "bandit>=1.7",
    "pre-commit>=3.0",
]
fuzz = [
    "atheris>=2.3",
]
rust = [
    "maturin>=1.7,<2.0",
]
snn = []  # pure-numpy LIF+NEF engine, no external deps
benchmark = [
    "freegs>=0.6",
]
full-physics = [
    "freegs>=0.6",
    "omas>=0.70",
]
gpu = [
    "jax[cuda12]>=0.4.20",
    "cupy-cuda12x>=13.6,<14.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
]
mpi = [
    "mpi4py>=4.1",
]
full = [
    "streamlit",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "cupy-cuda12x>=13.6,<14.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
    "gymnasium>=1.0.0",
    "freegs>=0.6",
    "mpi4py>=4.1",
    "omas>=0.70",
    "maturin>=1.7,<2.0",
]

[tool.setuptools]
packages = ["scpn_fusion", "validation"]
package-dir = {"" = "src", "validation" = "validation"}

[project.scripts]
scpn-fusion = "scpn_fusion.cli:main"
scpn-dashboard = "scpn_fusion.ui.dashboard_launcher:main"

[tool.mypy]
strict = true
ignore_missing_imports = false

# Strict defaults apply to every mypy invocation. The file cohort below is the
# currently gated typed surface and is expanded incrementally as modules are
# brought to strict-clean status.
files = [
    # scpn/ (existing)
    "src/scpn_fusion/scpn/contracts.py",
    "src/scpn_fusion/scpn/controller.py",
    "src/scpn_fusion/scpn/structure.py",
    "src/scpn_fusion/scpn/artifact.py",
    "src/scpn_fusion/scpn/compiler.py",
    "src/scpn_fusion/scpn/__init__.py",
    # io/
    "src/scpn_fusion/io/__init__.py",
    "src/scpn_fusion/io/imas_connector.py",
    "src/scpn_fusion/io/tokamak_archive.py",
    # diagnostics/
    "src/scpn_fusion/diagnostics/__init__.py",
    "src/scpn_fusion/diagnostics/forward.py",
    # nuclear/
    "src/scpn_fusion/nuclear/__init__.py",
    "src/scpn_fusion/nuclear/blanket_neutronics.py",
    "src/scpn_fusion/nuclear/pwi_erosion.py",
    "src/scpn_fusion/nuclear/temhd_peltier.py",
    # core/
    "src/scpn_fusion/core/eqdsk.py",
    "src/scpn_fusion/core/stability_mhd.py",
    "src/scpn_fusion/core/integrated_transport_solver.py",
    "src/scpn_fusion/core/tglf_interface.py",
    "src/scpn_fusion/core/_surrogate_utils.py",
    "src/scpn_fusion/core/neural_transport_math.py",
    # control/
    "src/scpn_fusion/control/halo_re_physics.py",
    "src/scpn_fusion/control/h_infinity_controller.py",
    "src/scpn_fusion/control/nengo_snn_wrapper.py",
    "src/scpn_fusion/control/__init__.py",
    # Sprint 4 mypy expansion
    "src/scpn_fusion/control/fokker_planck_re.py",
    "src/scpn_fusion/control/spi_ablation.py",
    "src/scpn_fusion/control/fusion_nmpc_jax.py",
    "src/scpn_fusion/control/disruption_contract_primitives.py",
    "src/scpn_fusion/control/disruption_contracts.py",
    "src/scpn_fusion/control/disruption_replay_contracts.py",
    "src/scpn_fusion/control/burn_controller.py",
    "src/scpn_fusion/control/density_controller.py",
    "src/scpn_fusion/control/detachment_controller.py",
    "src/scpn_fusion/control/fueling_mode.py",
    "src/scpn_fusion/control/sliding_mode_vertical.py",
    "src/scpn_fusion/control/state_estimator.py",
    "src/scpn_fusion/control/volt_second_manager.py",
    "src/scpn_fusion/control/runaway_electron_model.py",
    "src/scpn_fusion/control/rust_flight_sim_wrapper.py",
    "src/scpn_fusion/control/rwm_feedback.py",
    "src/scpn_fusion/control/rzip_model.py",
    "src/scpn_fusion/control/safe_rl_controller.py",
    "src/scpn_fusion/control/scenario_scheduler.py",
    "src/scpn_fusion/control/shape_controller.py",
    "src/scpn_fusion/core/mhd_sawtooth.py",
    "src/scpn_fusion/core/divertor_thermal_sim.py",
    # Phase dynamics strict cohort
    "src/scpn_fusion/phase/__init__.py",
    "src/scpn_fusion/phase/adaptive_knm.py",
    "src/scpn_fusion/phase/gk_upde_bridge.py",
    "src/scpn_fusion/phase/knm.py",
    "src/scpn_fusion/phase/kuramoto.py",
    "src/scpn_fusion/phase/lyapunov_guard.py",
    "src/scpn_fusion/phase/plasma_knm.py",
    "src/scpn_fusion/phase/realtime_monitor.py",
    "src/scpn_fusion/phase/upde.py",
    "src/scpn_fusion/phase/ws_phase_stream.py",
]

[[tool.mypy.overrides]]
module = ["sc_neurocore", "sc_neurocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scpn_fusion_rs"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["MDSplus", "MDSplus.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["omas", "omas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["h5py", "h5py.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["websockets", "websockets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "scpn_fusion.control.h_infinity_controller",
    "scpn_fusion.control.fokker_planck_re",
    "scpn_fusion.control.spi_ablation",
    "scpn_fusion.control.fusion_nmpc_jax",
    "scpn_fusion.core.mhd_sawtooth",
    "scpn_fusion.core.divertor_thermal_sim",
]
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-p no:pytest_nengo --strict-markers"
markers = [
    "slow: marks long-running regression tests",
    "experimental: marks experimental/research-only validation lanes",
    "stress: marks stress tests (long-running, main-push only)",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:.*oneOf.*[dD]eprecated.*:Warning",
    "default::UserWarning",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks", "validation/reference_data", "weights"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
  "E402",
  "E741",
  "I001",
  "UP006", "UP007", "UP015", "UP031", "UP035", "UP037", "UP038", "UP045",
  "F841",
  "SIM102", "SIM105", "SIM108",
  "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.ruff.lint.per-file-ignores]
# Re-exports
"__init__.py" = ["F401"]
# Notebooks: re-exports + cell redefinitions
"examples/*.ipynb" = ["F401", "F811"]
# Conditional imports in try/except blocks (optional dependencies)
"src/scpn_fusion/control/director_interface.py" = ["F401"]
"src/scpn_fusion/control/fusion_nmpc_jax.py" = ["F401"]
"src/scpn_fusion/core/_rust_compat.py" = ["F401"]
"src/scpn_fusion/core/fno_turbulence_suppressor.py" = ["F401"]
"src/scpn_fusion/core/force_balance.py" = ["F401"]
"src/scpn_fusion/core/current_diffusion.py" = ["F841"]
"src/scpn_fusion/core/global_design_scanner.py" = ["F401"]
"src/scpn_fusion/core/lazarus_bridge.py" = ["F401"]
"src/scpn_fusion/core/vibrana_bridge.py" = ["F401"]
"src/scpn_fusion/core/wdm_engine.py" = ["F401"]
# Forward reference to TransportSolver (circular import guard)
"src/scpn_fusion/core/integrated_transport_solver_adaptive.py" = ["F821"]
# Conditional imports in tests/tools/validation
"tests/test_rust_python_parity.py" = ["F401"]
"tests/test_fno_training.py" = ["F401"]
"tests/test_gpu_jax_backend.py" = ["F401"]
"tools/generate_benchmark_plots.py" = ["F401"]
"validation/benchmark_vs_freegs.py" = ["F401"]

[tool.bandit]
skips = ["B101", "B311"]
exclude_dirs = ["tests", "notebooks", "validation"]

[tool.coverage.run]
source = ["scpn_fusion"]
omit = [
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "raise NotImplementedError",
    "except ImportError",
    "if HAS_JAX",
    "if HAS_FREEGS",
    "if HAS_OMAS",
]
