[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-fusion"
version = "3.9.11"
description = "SCPN Fusion Core - Advanced Plasma Physics & Control Suite"
authors = [
    {name = "Miroslav Sotek"},
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta",
]
readme = "README.md"
dependencies = [
    "click>=8.1",
    "numpy>=1.24,<2.0",
    "matplotlib",
    "scipy",
    "pydantic>=2.0",
    "pandas>=1.5",
    "requests>=2.31",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/anulum/scpn-fusion-core"
Documentation = "https://anulum.github.io/scpn-fusion-core/"
Repository = "https://github.com/anulum/scpn-fusion-core"
"Bug Tracker" = "https://github.com/anulum/scpn-fusion-core/issues"

[project.optional-dependencies]
ui = [
    "streamlit",
]
ml = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
rl = [
    "gymnasium>=1.0.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.8",
    "bandit>=1.7",
    "pre-commit>=3.0",
    "types-psutil>=7.2.2.20260518",
]
fuzz = [
    "atheris>=2.3",
]
rust = [
    "maturin>=1.7,<2.0",
]
snn = []  # pure-numpy LIF+NEF engine, no external deps
benchmark = [
    "freegs>=0.6",
]
full-physics = [
    "freegs>=0.6",
    "omas>=0.70",
]
gpu = [
    "jax[cuda12]>=0.4.20",
    "cupy-cuda12x>=13.6,<14.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
]
mpi = [
    "mpi4py>=4.1",
]
full = [
    "streamlit",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "cupy-cuda12x>=13.6,<14.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
    "gymnasium>=1.0.0",
    "freegs>=0.6",
    "mpi4py>=4.1",
    "omas>=0.70",
    "maturin>=1.7,<2.0",
]

[tool.setuptools]
packages = ["scpn_fusion", "validation"]
package-dir = {"" = "src", "validation" = "validation"}

[project.scripts]
scpn-fusion = "scpn_fusion.cli:main"
scpn-dashboard = "scpn_fusion.ui.dashboard_launcher:main"

[tool.mypy]
strict = true
ignore_missing_imports = false

# Strict defaults apply to every mypy invocation. The file cohort below is the
# currently gated typed surface and is expanded incrementally as modules are
# brought to strict-clean status.
files = [
    # Top-level package entrypoints
    "src/scpn_fusion/__init__.py",
    "src/scpn_fusion/cli.py",
    # scpn/ (existing)
    "src/scpn_fusion/scpn/contracts.py",
    "src/scpn_fusion/scpn/controller.py",
    "src/scpn_fusion/scpn/controller_backend_mixin.py",
    "src/scpn_fusion/scpn/controller_features_mixin.py",
    "src/scpn_fusion/scpn/structure.py",
    "src/scpn_fusion/scpn/artifact.py",
    "src/scpn_fusion/scpn/artifact_codec.py",
    "src/scpn_fusion/scpn/artifact_schema.py",
    "src/scpn_fusion/scpn/artifact_validation.py",
    "src/scpn_fusion/scpn/compiler.py",
    "src/scpn_fusion/scpn/controller_runtime_backend.py",
    "src/scpn_fusion/scpn/safety_interlocks.py",
    "src/scpn_fusion/scpn/__init__.py",
    # io/
    "src/scpn_fusion/io/__init__.py",
    "src/scpn_fusion/io/_tokamak_archive_shots.py",
    "src/scpn_fusion/io/imas_connector.py",
    "src/scpn_fusion/io/imas_connector_common.py",
    "src/scpn_fusion/io/imas_connector_digital_twin.py",
    "src/scpn_fusion/io/imas_connector_equilibrium.py",
    "src/scpn_fusion/io/imas_connector_omas.py",
    "src/scpn_fusion/io/imas_connector_storage.py",
    "src/scpn_fusion/io/imas_connector_transport.py",
    "src/scpn_fusion/io/imas_history_payloads.py",
    "src/scpn_fusion/io/logging_config.py",
    "src/scpn_fusion/io/mast_ingestor.py",
    "src/scpn_fusion/io/safe_loaders.py",
    "src/scpn_fusion/io/tokamak_live_payload.py",
    "src/scpn_fusion/io/tokamak_archive.py",
    "src/scpn_fusion/io/tokamak_archive_profiles.py",
    "src/scpn_fusion/io/tokamak_disruption_archive.py",
    "src/scpn_fusion/io/tokamak_synthetic_archive.py",
    # diagnostics/
    "src/scpn_fusion/diagnostics/__init__.py",
    "src/scpn_fusion/diagnostics/forward.py",
    "src/scpn_fusion/diagnostics/run_diagnostics.py",
    "src/scpn_fusion/diagnostics/synthetic_sensors.py",
    "src/scpn_fusion/diagnostics/tomography.py",
    # hpc/
    "src/scpn_fusion/hpc/__init__.py",
    "src/scpn_fusion/hpc/hpc_bridge.py",
    "tests/test_hpc_bridge.py",
    # ui/
    "src/scpn_fusion/ui/__init__.py",
    "src/scpn_fusion/ui/app.py",
    "src/scpn_fusion/ui/dashboard_generator.py",
    "src/scpn_fusion/ui/dashboard_launcher.py",
    "src/scpn_fusion/ui/security_headers.py",
    # nuclear/
    "src/scpn_fusion/nuclear/__init__.py",
    "src/scpn_fusion/nuclear/blanket_neutronics.py",
    "src/scpn_fusion/nuclear/nuclear_wall_interaction.py",
    "src/scpn_fusion/nuclear/pwi_erosion.py",
    "src/scpn_fusion/nuclear/temhd_peltier.py",
    # core/
    "src/scpn_fusion/core/eqdsk.py",
    "src/scpn_fusion/core/stability_mhd.py",
    "src/scpn_fusion/core/integrated_transport_solver.py",
    "src/scpn_fusion/core/tglf_interface.py",
    "src/scpn_fusion/core/hpc_bridge.py",
    "src/scpn_fusion/core/_surrogate_utils.py",
    "src/scpn_fusion/core/neural_transport_math.py",
    "src/scpn_fusion/core/runaway_electrons.py",
    "src/scpn_fusion/core/mrti.py",
    "src/scpn_fusion/core/vessel_model.py",
    "src/scpn_fusion/core/ntm_dynamics.py",
    "src/scpn_fusion/core/locked_mode.py",
    "src/scpn_fusion/core/_neural_transport_types.py",
    "src/scpn_fusion/core/_neural_transport_analytic.py",
    "src/scpn_fusion/core/_neural_transport_runtime.py",
    "src/scpn_fusion/core/_gk_nonlinear_types.py",
    "src/scpn_fusion/core/_multi_compat.py",
    "src/scpn_fusion/core/_tglf_interface_benchmark.py",
    "src/scpn_fusion/core/_tglf_interface_reference.py",
    "src/scpn_fusion/core/_tglf_interface_runtime.py",
    "src/scpn_fusion/core/_tglf_interface_types.py",
    "src/scpn_fusion/core/_validators.py",
    "src/scpn_fusion/core/amr_patch.py",
    "src/scpn_fusion/core/checkpoint.py",
    "src/scpn_fusion/core/config_schema.py",
    "src/scpn_fusion/core/current_diffusion.py",
    "src/scpn_fusion/core/elm_model.py",
    "src/scpn_fusion/core/eped_pedestal.py",
    "src/scpn_fusion/core/heating_neutronics_contracts.py",
    "src/scpn_fusion/core/imas_adapter.py",
    "src/scpn_fusion/core/marfe.py",
    "src/scpn_fusion/core/plasma_startup.py",
    "src/scpn_fusion/core/public_frc_reference.py",
    "src/scpn_fusion/core/scaling_laws.py",
    "src/scpn_fusion/core/tokamak_config.py",
    "src/scpn_fusion/core/sol_model.py",
    "src/scpn_fusion/core/pedestal.py",
    "src/scpn_fusion/core/sawtooth.py",
    "src/scpn_fusion/core/neoclassical.py",
    "src/scpn_fusion/core/current_drive.py",
    "src/scpn_fusion/core/orbit_following.py",
    "src/scpn_fusion/core/tearing_mode_coupling.py",
    "src/scpn_fusion/core/blob_transport.py",
    "src/scpn_fusion/core/ballooning_solver.py",
    "src/scpn_fusion/core/alfven_eigenmodes.py",
    "src/scpn_fusion/core/pellet_injection.py",
    "src/scpn_fusion/core/lh_transition.py",
    "src/scpn_fusion/core/rf_heating.py",
    # control/
    "src/scpn_fusion/control/halo_re_physics.py",
    "src/scpn_fusion/control/h_infinity_controller.py",
    "src/scpn_fusion/control/nengo_snn_wrapper.py",
    "src/scpn_fusion/control/__init__.py",
    "src/scpn_fusion/control/_free_boundary_control_geometry.py",
    "src/scpn_fusion/control/_free_boundary_estimator.py",
    "src/scpn_fusion/control/_free_boundary_plotting.py",
    "src/scpn_fusion/control/_free_boundary_safety_supervisor.py",
    "src/scpn_fusion/control/_free_boundary_simulation_arrays.py",
    "src/scpn_fusion/control/_free_boundary_simulation_summary.py",
    "src/scpn_fusion/control/_free_boundary_supervisory_types.py",
    "src/scpn_fusion/control/_free_boundary_tracking_types.py",
    "src/scpn_fusion/control/codac_interface.py",
    "src/scpn_fusion/control/fault_tolerant_control.py",
    "src/scpn_fusion/control/flight_sim_controllers.py",
    "src/scpn_fusion/control/gain_scheduled_controller.py",
    "src/scpn_fusion/control/hil_harness.py",
    "src/scpn_fusion/control/replay_pipeline.py",
    "src/scpn_fusion/control/free_boundary_supervisory_control.py",
    "src/scpn_fusion/control/stellarator_control_contracts.py",
    # Sprint 4 mypy expansion
    "src/scpn_fusion/control/fokker_planck_re.py",
    "src/scpn_fusion/control/spi_ablation.py",
    "src/scpn_fusion/control/fusion_nmpc_jax.py",
    "src/scpn_fusion/control/disruption_contract_primitives.py",
    "src/scpn_fusion/control/disruption_contracts.py",
    "src/scpn_fusion/control/disruption_replay_contracts.py",
    "src/scpn_fusion/control/burn_controller.py",
    "src/scpn_fusion/control/density_controller.py",
    "src/scpn_fusion/control/detachment_controller.py",
    "src/scpn_fusion/control/fueling_mode.py",
    "src/scpn_fusion/control/sliding_mode_vertical.py",
    "src/scpn_fusion/control/state_estimator.py",
    "src/scpn_fusion/control/volt_second_manager.py",
    "src/scpn_fusion/control/runaway_electron_model.py",
    "src/scpn_fusion/control/rust_flight_sim_wrapper.py",
    "src/scpn_fusion/control/rwm_feedback.py",
    "src/scpn_fusion/control/rzip_model.py",
    "src/scpn_fusion/control/safe_rl_controller.py",
    "src/scpn_fusion/control/scenario_scheduler.py",
    "src/scpn_fusion/control/shape_controller.py",
    "src/scpn_fusion/core/mhd_sawtooth.py",
    "src/scpn_fusion/core/divertor_thermal_sim.py",
    # Phase dynamics strict cohort
    "src/scpn_fusion/phase/__init__.py",
    "src/scpn_fusion/phase/adaptive_knm.py",
    "src/scpn_fusion/phase/gk_upde_bridge.py",
    "src/scpn_fusion/phase/knm.py",
    "src/scpn_fusion/phase/kuramoto.py",
    "src/scpn_fusion/phase/lyapunov_guard.py",
    "src/scpn_fusion/phase/plasma_knm.py",
    "src/scpn_fusion/phase/realtime_monitor.py",
    "src/scpn_fusion/phase/upde.py",
    "src/scpn_fusion/phase/ws_phase_stream.py",
    # Engineering strict cohort
    "src/scpn_fusion/engineering/__init__.py",
    "src/scpn_fusion/engineering/balance_of_plant.py",
    "src/scpn_fusion/engineering/cad_raytrace.py",
    "src/scpn_fusion/engineering/thermal_hydraulics.py",
    # Runtime compatibility strict cohort
    "src/scpn_fusion/exceptions.py",
    "src/scpn_fusion/fallback_telemetry.py",
    "src/scpn_fusion/neurocore_compat.py",
]

[[tool.mypy.overrides]]
module = ["sc_neurocore", "sc_neurocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scpn_fusion_rs"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["MDSplus", "MDSplus.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["omas", "omas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "scpn_fusion.control.h_infinity_controller",
    "scpn_fusion.control.fokker_planck_re",
    "scpn_fusion.control.spi_ablation",
    "scpn_fusion.control.fusion_nmpc_jax",
    "scpn_fusion.core.mhd_sawtooth",
    "scpn_fusion.core.divertor_thermal_sim",
]
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-p no:pytest_nengo --strict-markers"
markers = [
    "slow: marks long-running regression tests",
    "experimental: marks experimental/research-only validation lanes",
    "stress: marks stress tests (long-running, main-push only)",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:.*oneOf.*[dD]eprecated.*:Warning",
    "default::UserWarning",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks", "validation/reference_data", "weights"]

[tool.ruff.lint]
# NumPy-convention docstring (`D`) rules are enforced separately on the strict
# mypy cohort via `tools/run_ruff_docstrings.py` (wired into the preflight gate),
# so the cohort is the single source of truth for both typing and docstrings.
# They are intentionally kept out of the global `select` until every src module
# has graduated into the cohort.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
  "E402",
  "E741",
  "I001",
  "UP006", "UP007", "UP015", "UP031", "UP035", "UP037", "UP038", "UP045",
  "F841",
  "SIM102", "SIM105", "SIM108",
  "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.ruff.lint.per-file-ignores]
# Re-exports
"__init__.py" = ["F401"]
# Notebooks: re-exports + cell redefinitions
"examples/*.ipynb" = ["F401", "F811"]
# Conditional imports in try/except blocks (optional dependencies)
"src/scpn_fusion/control/director_interface.py" = ["F401"]
"src/scpn_fusion/control/fusion_nmpc_jax.py" = ["F401"]
"src/scpn_fusion/core/_rust_compat.py" = ["F401"]
"src/scpn_fusion/core/fno_turbulence_suppressor.py" = ["F401"]
"src/scpn_fusion/core/force_balance.py" = ["F401"]
"src/scpn_fusion/core/current_diffusion.py" = ["F841"]
"src/scpn_fusion/core/global_design_scanner.py" = ["F401"]
"src/scpn_fusion/core/lazarus_bridge.py" = ["F401"]
"src/scpn_fusion/core/vibrana_bridge.py" = ["F401"]
"src/scpn_fusion/core/wdm_engine.py" = ["F401"]
# Forward reference to TransportSolver (circular import guard)
"src/scpn_fusion/core/integrated_transport_solver_adaptive.py" = ["F821"]
# Conditional imports in tests/tools/validation
"tests/test_rust_python_parity.py" = ["F401"]
"tests/test_fno_training.py" = ["F401"]
"tests/test_gpu_jax_backend.py" = ["F401"]
"tools/generate_benchmark_plots.py" = ["F401"]
"validation/benchmark_vs_freegs.py" = ["F401"]

[tool.bandit]
skips = ["B101", "B311"]
exclude_dirs = ["tests", "notebooks", "validation"]

[tool.coverage.run]
source = ["scpn_fusion"]
omit = [
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "raise NotImplementedError",
    "except ImportError",
    "if HAS_JAX",
    "if HAS_FREEGS",
    "if HAS_OMAS",
]
